# mcp_based_poc

./: .gitignore  README.md  main.py  mcp_router.py  requirements.txt
mcp_app/: .env
mcp_app/mcp_project/: app.py  chat_output.md  mcp_chatbot.py  pyproject.toml  research_server.py
mcp_app/mcp_project/papers/cloud/: papers_info.json
mcp_app/mcp_project/papers/nlp/: papers_info.json
mcp_app/papers/computers/: papers_info.json
wrapper-poc/: context_store.py  main.py
